k8s/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: crypt-pit-basic:traefik.io/IngressRoute:default/crypt-pit
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"crypt-pit-basic:traefik.io/IngressRoute:default/crypt-pit"},"creationTimestamp":"2026-05-03T22:04:03Z","generation":2,"labels":{"app":"crypt-pit","managed-by":"kustomize"},"name":"crypt-pit","namespace":"default","resourceVersion":"414156","uid":"ab98d878-9077-4b08-b212-4788e17e7405"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`crypt.s [...]
  creationTimestamp: "2026-05-03T22:04:03Z"
  generation: 2
  labels:
    app: crypt-pit
    managed-by: kustomize
  name: crypt-pit
  namespace: default
  resourceVersion: "414369"
  uid: ab98d878-9077-4b08-b212-4788e17e7405
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`crypt.skravops.xyz`)
    services:
    - name: crypt-pit
      port: 80
